# eufy-clean

./: .flake8  .gitignore  .pre-commit-config.yaml  .ultrareview-feat-local-tuya-transport.md  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  example.py  hacs.json  main.py  node.Dockerfile  package-lock.json  package.json  pyproject.toml  requirements_test.txt  run_tests.py  stuff.py  test_decoding.py  tsconfig.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: hassfest.yaml  lint.yaml  tests.yaml
api/: EufyApi.py
constants/: state.py
controllers/: Base.py  CloudConnect.py  Login.py  MqttConnect.py  SharedConnect.py
custom_components/robovac_mqtt/: EufyApi.py  EufyClean.py  __init__.py  _orphan_cleanup.py  binary_sensor.py  button.py  camera.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  main.py  manifest.json  map_renderer.py  models.py  number.py  select.py  sensor.py  services.yaml  strings.json  switch.py  time.py  utils.py  vacuum.py
docs/: ARCHITECTURE.md  MAP_DATA_RESEARCH.md
eufy-dps-extractor/: .dockerignore  .gitignore  Dockerfile  README.md  deep_scan.py  docker-compose.yml  extract.sh
lib/: utils.py
src/: app.ts  index.ts  main.ts
tests/: conftest.py  test_api.py  test_binary_sensor.py  test_button.py  test_client.py  test_cloud.py  test_commands.py  test_config_flow.py  test_coordinator.py  test_coordinator_local.py  test_diagnostics.py  test_dps154_enhancements.py  test_entity.py  test_error_handling_matter.py  test_error_parsing.py  test_http.py  test_init.py  test_legacy_commands.py  test_legacy_parser.py  test_local_tuya.py  test_map_stream.py  test_missing_data_handling.py  test_mqtt_integration.py  test_number.py  test_orphan_cleanup.py  test_parser.py  test_parser_accessories.py  test_parser_cleaning_stats.py  test_properties_matter_alignment.py  test_review_fixes.py  test_room_at_point.py  test_room_overrides.py  test_scene_state.py  test_segment_cleaning.py  test_segment_detection.py  test_select.py  test_sensor.py  test_sensor_accessories.py  test_switch.py  test_task_status.py  (+6 more)
(+72 files in other folders)
